[package]
name = "parse_logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.19"
log = "0.4"
env_logger = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["default-tls", "json"] }
backoff = { version = "0.3", features = ["tokio"] }
hex = "0.4"
chrono = "0.4"
futures = "0.3"
